@@ -61,7 +61,7 @@ private slots:
     void test_renderToEvents_customNoteOffOffsetSet_shouldApplyCorrectOffset();
 
     void test_addTrack_shouldUseSmallestFreeId();
-
+    void test_addTrackToLeft_shouldUseSmallestFreeId();
     void test_trackByName_shouldReturnTrack();
     void test_columnByName_shouldReturnColumn();
 };
