@@ -7,6 +7,8 @@ New features:
 
 * Implement individual delays for chord notes
 
+* Make it possible to insert a new track also to the left
+
 Bug fixes:
 
 Other:
